# rtve

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  readme.md
apps/accounts/: models.py  serializers.py
apps/accounts/views/: api.py
apps/categories/: serializers.py
apps/expenditure/: apps.py  filters.py  models.py  serializers.py
apps/expenditure/views/: api.py
backend/: Dockerfile  pyproject.toml
backend/apps/accounts/: manager.py  serializers.py
backend/apps/accounts/views/: api.py
backend/apps/categories/: admin.py  models.py  serializers.py
backend/apps/categories/views/: api.py
backend/apps/core/: endpoints.py  models.py
backend/apps/core/permissions/: rest_framework.py
backend/apps/expenditure/: admin.py  models.py  serializers.py
backend/apps/expenditure/views/: api.py
backend/rtve/: asgi.py  wsgi.py
backend/rtve/settings/: base.py  cors_settings.py  database_settings.py  installed_apps_settings.py  internationalizations_settings.py  media_settings.py  rest_framework_settings.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: FormCategories.tsx  FormExpenditure.tsx  ListCategories.tsx  ListExpenditure.tsx  NavBar.tsx  ReadMe.tsx
frontend/src/entity/: interfaces.tsx
frontend/src/pages/: Categories.tsx  Expenditure.tsx  Home.tsx
frontend/src/services/: apis.ts
rtve/: urls.py
rtve/settings/: auth_settings.py  base.py  cache_settings.py  installed_apps_settings.py  rest_framework_settings.py
(+1 files in other folders)
